force-app/main/default/objects/Child_Site_Creation__c/Child_Site_Creation__c.object-meta.xml
<CustomObject>
    <description>Created to temporarily store values to create child site records for different objects.</description>
    <label>Child Site Creation</label>
    <nameField>
        <label>Child Record Creation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Child Sites Creation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>