force-app/main/default/objects/Child_Site_Creation__c/fields/Billing_Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Billing_Closed_Lost_Reason__c</fullName>
    <label>Billing Closed Lost Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>