force-app/main/default/objects/Child_Site_Creation__c/fields/Billing_Conversation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Conversation_Notes__c</fullName>
    <label>Billing Conversation Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>