force-app/main/default/objects/Child_Site_Creation__c/fields/Billing_Intervals__c.field-meta.xml
<CustomField>
    <fullName>Billing_Intervals__c</fullName>
    <label>Billing Intervals</label>
    <length>255</length>
    <type>Text</type>
</CustomField>