force-app/main/default/objects/Child_Site_Creation__c/fields/Billing_Intervals_New__c.field-meta.xml
<CustomField>
    <fullName>Billing_Intervals_New__c</fullName>
    <label>Billing Intervals</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Intervals</valueSetName>
    </valueSet>
</CustomField>