force-app/main/default/objects/Child_Site_Creation__c/fields/Billing_Opt_Out_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Billing_Opt_Out_Reason_Detail__c</fullName>
    <label>Billing Opt Out Reason Detail</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>