force-app/main/default/objects/Child_Site_Creation__c/fields/Billing_Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Primary_Contact__c</fullName>
    <label>Billing Primary Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>