force-app/main/default/objects/Child_Site_Creation__c/fields/Billing_Status_at_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Billing_Status_at_Closed_Won__c</fullName>
    <label>Billing Status at Closed Won</label>
    <length>255</length>
    <type>Text</type>
</CustomField>