force-app/main/default/objects/Child_Site_Creation__c/fields/Brightwheel_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Brightwheel_User_Id__c</fullName>
    <label>Brightwheel User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>