force-app/main/default/objects/Child_Site_Creation__c/fields/Child_Account_Created__c.field-meta.xml
<CustomField>
    <fullName>Child_Account_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Account Created</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Child Sites Creation</relationshipLabel>
    <relationshipName>Child_Sites_Creation</relationshipName>
    <type>Lookup</type>
</CustomField>