force-app/main/default/objects/Child_Site_Creation__c/fields/Child_Combined_Funnel_Created__c.field-meta.xml
<CustomField>
    <fullName>Child_Combined_Funnel_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Combined Funnel Created</label>
    <referenceTo>Combined_Funnel__c</referenceTo>
    <relationshipLabel>Child Sites Creation</relationshipLabel>
    <relationshipName>Child_Sites_Creation</relationshipName>
    <type>Lookup</type>
</CustomField>