force-app/main/default/objects/Child_Site_Creation__c/fields/Child_Opportunity_Created__c.field-meta.xml
<CustomField>
    <fullName>Child_Opportunity_Created__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Opportunity Created</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Child Sites Creation (Child Opportunity Created)</relationshipLabel>
    <relationshipName>Child_Sites_Creation1</relationshipName>
    <type>Lookup</type>
</CustomField>