force-app/main/default/objects/Child_Site_Creation__c/fields/Child_Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Child_Site_Name__c</fullName>
    <label>Child Site Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>