force-app/main/default/objects/Child_Site_Creation__c/fields/Chosen_Existing_Account__c.field-meta.xml
<CustomField>
    <fullName>Chosen_Existing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chosen Existing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Child Sites Creation (Chosen Existing Account)</relationshipLabel>
    <relationshipName>Child_Sites_Creation1</relationshipName>
    <type>Lookup</type>
</CustomField>