force-app/main/default/objects/Child_Site_Creation__c/fields/Closed_Won_School_Id__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_School_Id__c</fullName>
    <label>Closed Won School Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>