force-app/main/default/objects/Child_Site_Creation__c/fields/Current_Center_Operating_Status__c.field-meta.xml
<CustomField>
    <fullName>Current_Center_Operating_Status__c</fullName>
    <label>Current Center Operating Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>