force-app/main/default/objects/Child_Site_Creation__c/fields/Current_Tool_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>Current_Tool_for_Billing__c</fullName>
    <label>Current Tool for Billing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>