force-app/main/default/objects/Child_Site_Creation__c/fields/Expected_of_Paying_Students__c.field-meta.xml
<CustomField>
    <fullName>Expected_of_Paying_Students__c</fullName>
    <label>Expected # of Paying Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>