force-app/main/default/objects/Child_Site_Creation__c/fields/First_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Bill_Date__c</fullName>
    <label>First Bill Date</label>
    <type>Date</type>
</CustomField>