force-app/main/default/objects/Child_Site_Creation__c/fields/First_Site_Add_Child__c.field-meta.xml
<CustomField>
    <fullName>First_Site_Add_Child__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Site Add Child</label>
    <type>Checkbox</type>
</CustomField>