force-app/main/default/objects/Child_Site_Creation__c/fields/JG_Impersonate_Link__c.field-meta.xml
<CustomField>
    <fullName>JG_Impersonate_Link__c</fullName>
    <formula>IF(NOT(ISBLANK(Brightwheel_User_Id__c)),
HYPERLINK(&apos;https://tools.mybrightwheel.com/admin/users/&apos; &amp; Brightwheel_User_Id__c &amp; &apos;/impersonate&apos;, &apos;Impersonate&apos;), &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JG Impersonate Link</label>
    <type>Text</type>
</CustomField>