force-app/main/default/objects/Child_Site_Creation__c/fields/JungleGym_Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>JungleGym_Failure_Reason__c</fullName>
    <label>JungleGym Failure Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>