force-app/main/default/objects/Child_Site_Creation__c/fields/JungleGym_Sync_Error_Resolved__c.field-meta.xml
<CustomField>
    <fullName>JungleGym_Sync_Error_Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JungleGym Sync Error Resolved</label>
    <type>Checkbox</type>
</CustomField>