force-app/main/default/objects/Child_Site_Creation__c/fields/JungleGym_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>JungleGym_Sync_Status__c</fullName>
    <label>JungleGym Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>