force-app/main/default/objects/Child_Site_Creation__c/fields/OBS_Call_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>OBS_Call_Scheduled_Date__c</fullName>
    <label>OBS Call Scheduled Date</label>
    <type>Date</type>
</CustomField>