force-app/main/default/objects/Child_Site_Creation__c/fields/OBS_Owner__c.field-meta.xml
<CustomField>
    <fullName>OBS_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OBS Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Child_Sites_Creation</relationshipName>
    <type>Lookup</type>
</CustomField>