force-app/main/default/objects/Child_Site_Creation__c/fields/of_Staff__c.field-meta.xml
<CustomField>
    <fullName>of_Staff__c</fullName>
    <label># of Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>