force-app/main/default/objects/Child_Site_Creation__c/fields/Onboarding_Path__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Path__c</fullName>
    <label>Onboarding Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>