force-app/main/default/objects/Child_Site_Creation__c/fields/Open_and_Operating_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_and_Operating_Date__c</fullName>
    <label>Open and Operating Date</label>
    <type>Date</type>
</CustomField>