force-app/main/default/objects/Child_Site_Creation__c/fields/Original_CW_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Original_CW_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original CW Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Child Sites Creation</relationshipLabel>
    <relationshipName>Child_Sites_Creation</relationshipName>
    <type>Lookup</type>
</CustomField>