force-app/main/default/objects/Child_Site_Creation__c/fields/Reason_SSP_was_not_added__c.field-meta.xml
<CustomField>
    <fullName>Reason_SSP_was_not_added__c</fullName>
    <label>Reason SSP was not added</label>
    <length>255</length>
    <type>Text</type>
</CustomField>