force-app/main/default/objects/Child_Site_Creation__c/fields/Reason_SSP_Was_Not_Added_Details__c.field-meta.xml
<CustomField>
    <fullName>Reason_SSP_Was_Not_Added_Details__c</fullName>
    <label>Reason SSP Was Not Added Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>