force-app/main/default/objects/Child_Site_Creation__c/fields/Related_Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Payer_Account__c</fullName>
    <label>Related Payer Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>