force-app/main/default/objects/Child_Site_Creation__c/fields/Sales_Follow_up_Call_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Follow_up_Call_Scheduled_Date__c</fullName>
    <label>Sales Follow-up Call Scheduled Date</label>
    <type>Date</type>
</CustomField>