force-app/main/default/objects/Child_Site_Creation__c/fields/Same_Billing_Status_at_CW_as_the_Parent__c.field-meta.xml
<CustomField>
    <fullName>Same_Billing_Status_at_CW_as_the_Parent__c</fullName>
    <label>Same Billing Status at CW as the Parent?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>