force-app/main/default/objects/Child_Site_Creation__c/fields/Same_Onboarding_and_SSPR_as_the_Parent__c.field-meta.xml
<CustomField>
    <fullName>Same_Onboarding_and_SSPR_as_the_Parent__c</fullName>
    <label>Same Onboarding and SSPR as the Parent?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>