force-app/main/default/objects/Child_Site_Creation__c/fields/School_UUID__c.field-meta.xml
<CustomField>
    <fullName>School_UUID__c</fullName>
    <label>School UUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>