force-app/main/default/objects/Child_Site_Creation__c/fields/Target_Billing_Launch_Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Target_Billing_Launch_Timeframe__c</fullName>
    <label>Target Billing Launch Timeframe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>