force-app/main/default/objects/Child_Site_Creation__c/fields/Target_Billing_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Billing_Start_Date__c</fullName>
    <label>Target Billing Start Date</label>
    <type>Date</type>
</CustomField>