force-app/main/default/objects/Child_Site_Creation__c/fields/Updated_by_CW_Flow__c.field-meta.xml
<CustomField>
    <fullName>Updated_by_CW_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Updated by CW Flow</label>
    <type>Checkbox</type>
</CustomField>