force-app/main/default/objects/Child_Site_Creation__c/fields/Uses_Attendance_or_Variable_Rate_Billing__c.field-meta.xml
<CustomField>
    <fullName>Uses_Attendance_or_Variable_Rate_Billing__c</fullName>
    <label>Uses Attendance or Variable Rate Billing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>