force-app/main/default/objects/Child_Site_Creation__c/fields/Was_rate_card_captured__c.field-meta.xml
<CustomField>
    <fullName>Was_rate_card_captured__c</fullName>
    <label>Was rate card captured?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>