force-app/main/default/objects/Child_Site_Creation__c/fields/Was_SSP_added_on_call__c.field-meta.xml
<CustomField>
    <fullName>Was_SSP_added_on_call__c</fullName>
    <label>Was SSP added on call?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>